// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renders the <Card /> and toggle the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 hIWIWR"
>
  <div
    class="card__Container-s87lnr-1 hCZzYq"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 dYhVsf"
    >
      <div
        class="card__Item-s87lnr-13 eAkJzu"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-14 cITsZV"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-8 hLuDvX"
        >
          <p
            class="card__SubTitle-s87lnr-3 eknUjV"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 clfzc"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 hCZzYq"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 dYhVsf"
    >
      <div
        class="card__Item-s87lnr-13 eAkJzu"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-14 cITsZV"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-8 hLuDvX"
        >
          <p
            class="card__SubTitle-s87lnr-3 eknUjV"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 clfzc"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renders the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 hIWIWR"
>
  <div
    class="card__Container-s87lnr-1 hCZzYq"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 dYhVsf"
    >
      <div
        class="card__Item-s87lnr-13 eAkJzu"
      >
        <img
          class="card__Image-s87lnr-14 cITsZV"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-8 hLuDvX"
        >
          <p
            class="card__SubTitle-s87lnr-3 eknUjV"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 clfzc"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 hCZzYq"
  >
    <p
      class="card__Title-s87lnr-0 cOUXPu"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 dYhVsf"
    >
      <div
        class="card__Item-s87lnr-13 eAkJzu"
      >
        <img
          class="card__Image-s87lnr-14 cITsZV"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-8 hLuDvX"
        >
          <p
            class="card__SubTitle-s87lnr-3 eknUjV"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 clfzc"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
